[gd_scene load_steps=26 format=3 uid="uid://fymr7ov40l8y"]

[ext_resource type="Script" path="res://Scripts/brauk.gd" id="1_hxv7a"]
[ext_resource type="Texture2D" uid="uid://bfaev1sy14ylw" path="res://Assets/Bosses/Brauk/SpriteSheet/Bringer-of-Death-SpritSheet_no-Effect.png" id="2_4nr8u"]
[ext_resource type="Texture2D" uid="uid://dbhp3305sdqo5" path="res://Assets/Bosses/Brauk/brauk.png" id="2_ibeb8"]
[ext_resource type="Script" path="res://Scenes/boss_health.gd" id="3_tgsyp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tcoid"]
size = Vector2(27, 54)

[sub_resource type="CircleShape2D" id="CircleShape2D_0iyvq"]
radius = 140.014

[sub_resource type="AtlasTexture" id="AtlasTexture_sofm6"]
atlas = ExtResource("2_4nr8u")
region = Rect2(770, 279, 70, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yqs6"]
atlas = ExtResource("2_4nr8u")
region = Rect2(910, 279, 70, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_dadmp"]
atlas = ExtResource("2_4nr8u")
region = Rect2(70, 372, 70, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8ncf"]
atlas = ExtResource("2_4nr8u")
region = Rect2(210, 372, 70, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_a62h8"]
atlas = ExtResource("2_4nr8u")
region = Rect2(350, 372, 70, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_ad1ch"]
atlas = ExtResource("2_4nr8u")
region = Rect2(490, 372, 70, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jibv"]
atlas = ExtResource("2_4nr8u")
region = Rect2(630, 372, 70, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_yg5d5"]
atlas = ExtResource("2_4nr8u")
region = Rect2(770, 372, 70, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_e14ue"]
atlas = ExtResource("2_4nr8u")
region = Rect2(910, 372, 70, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4w82"]
atlas = ExtResource("2_ibeb8")
region = Rect2(70, 0, 70, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_xstss"]
atlas = ExtResource("2_ibeb8")
region = Rect2(210, 0, 70, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_gbmv1"]
atlas = ExtResource("2_ibeb8")
region = Rect2(70, 93, 70, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmp1d"]
atlas = ExtResource("2_ibeb8")
region = Rect2(210, 93, 70, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_oq215"]
atlas = ExtResource("2_ibeb8")
region = Rect2(70, 186, 70, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_efftg"]
atlas = ExtResource("2_ibeb8")
region = Rect2(210, 186, 70, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3ydk"]
atlas = ExtResource("2_ibeb8")
region = Rect2(70, 279, 70, 93)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjrnj"]
atlas = ExtResource("2_ibeb8")
region = Rect2(210, 279, 70, 93)

[sub_resource type="SpriteFrames" id="SpriteFrames_drc0f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sofm6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yqs6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dadmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8ncf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a62h8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ad1ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jibv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yg5d5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e14ue")
}],
"loop": false,
"name": &"braukdeath",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4w82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xstss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gbmv1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmp1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oq215")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efftg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3ydk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjrnj")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tlrem"]
size = Vector2(42, 55)

[node name="brauk" type="CharacterBody2D"]
script = ExtResource("1_hxv7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 18)
shape = SubResource("RectangleShape2D_tcoid")

[node name="aggro_range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="aggro_range"]
position = Vector2(0, 18)
shape = SubResource("CircleShape2D_0iyvq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_drc0f")
animation = &"braukdeath"

[node name="brauk_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="brauk_hitbox"]
position = Vector2(1, 18.5)
shape = SubResource("RectangleShape2D_tlrem")

[node name="boss_health" type="ProgressBar" parent="."]
offset_left = -44.0
offset_top = -38.0
offset_right = 44.0
offset_bottom = -11.0
script = ExtResource("3_tgsyp")

[connection signal="body_entered" from="aggro_range" to="." method="_on_aggro_range_body_entered"]
[connection signal="body_exited" from="aggro_range" to="." method="_on_aggro_range_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="brauk_hitbox" to="." method="_on_brauk_hitbox_body_entered"]
[connection signal="body_exited" from="brauk_hitbox" to="." method="_on_brauk_hitbox_body_exited"]
